--- a/public/css/style.css
+++ b/public/css/style.css
@@ -566,6 +566,42 @@ video {
   padding-top: 2rem;
 }
 
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.left-1{
+  left: 0.25rem;
+}
+
+.left-8{
+  left: 2rem;
+}
+
+.top-8{
+  top: 2rem;
+}
+
+.left-6{
+  left: 1.5rem;
+}
+
+.top-6{
+  top: 1.5rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -578,8 +614,36 @@ video {
   margin-top: -1rem;
 }
 
-.mt-4{
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-0{
+  margin-top: 0px;
+}
+
+.mt-0\.5{
+  margin-top: 0.125rem;
+}
+
+.mt-\[0\.5rem\]{
+  margin-top: 0.5rem;
+}
+
+.mt-\[1rem\]{
   margin-top: 1rem;
+}
+
+.mt-\[0\.6rem\]{
+  margin-top: 0.6rem;
+}
+
+.mt-\[0\.1rem\]{
+  margin-top: 0.1rem;
+}
+
+.mt-\[0\.4rem\]{
+  margin-top: 0.4rem;
 }
 
 .flex{
@@ -598,124 +662,120 @@ video {
   height: 6rem;
 }
 
-.h-32{
-  height: 8rem;
-}
-
-.h-48{
-  height: 12rem;
-}
-
-.h-28{
-  height: 7rem;
-}
-
-.h-36{
-  height: 9rem;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-\[8rem\]{
-  height: 8rem;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-\[9rem\]{
-  height: 9rem;
-}
-
-.h-52{
-  height: 13rem;
-}
-
 .h-\[13rem\]{
   height: 13rem;
-}
-
-.h-\[12\.5rem\]{
-  height: 12.5rem;
-}
-
-.h-\[18rem\]{
-  height: 18rem;
 }
 
 .h-\[16rem\]{
   height: 16rem;
 }
 
-.h-\[12rem\]{
-  height: 12rem;
+.h-full{
+  height: 100%;
 }
 
-.h-\[14rem\]{
+.h-96{
+  height: 24rem;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-3{
+  height: 0.75rem;
+}
+
+.h-52{
+  height: 13rem;
+}
+
+.h-\[1rem\]{
+  height: 1rem;
+}
+
+.h-56{
   height: 14rem;
+}
+
+.h-9{
+  height: 2.25rem;
+}
+
+.h-\[3rem\]{
+  height: 3rem;
 }
 
 .h-\[10rem\]{
   height: 10rem;
 }
 
-.h-\[20rem\]{
-  height: 20rem;
+.h-2{
+  height: 0.5rem;
 }
 
-.h-\[15rem\]{
-  height: 15rem;
+.h-\[2rem\]{
+  height: 2rem;
+}
+
+.h-\[4rem\]{
+  height: 4rem;
 }
 
 .w-12{
   width: 3rem;
 }
 
-.w-28{
-  width: 7rem;
+.w-40{
+  width: 10rem;
 }
 
 .w-full{
   width: 100%;
 }
 
-.w-36{
-  width: 9rem;
+.w-10{
+  width: 2.5rem;
 }
 
-.w-20{
-  width: 5rem;
-}
-
-.w-16{
+.w-\[4rem\]{
   width: 4rem;
 }
 
-.w-24{
-  width: 6rem;
+.w-\[8rem\]{
+  width: 8rem;
 }
 
 .w-\[10rem\]{
   width: 10rem;
 }
 
-.w-\[100rem\]{
-  width: 100rem;
+.w-\[14rem\]{
+  width: 14rem;
 }
 
-.w-32{
-  width: 8rem;
+.w-\[5rem\]{
+  width: 5rem;
 }
 
-.w-48{
+.w-\[12rem\]{
   width: 12rem;
 }
 
-.w-40{
-  width: 10rem;
+.w-\[6rem\]{
+  width: 6rem;
+}
+
+.w-2{
+  width: 0.5rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-\[2rem\]{
+  width: 2rem;
 }
 
 .flex-1{
@@ -738,10 +798,6 @@ video {
   align-items: center;
 }
 
-.justify-start{
-  justify-content: flex-start;
-}
-
 .justify-center{
   justify-content: center;
 }
@@ -750,12 +806,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
 
-.gap-1{
-  gap: 0.25rem;
+.gap-4{
+  gap: 1rem;
 }
 
 .overflow-hidden{
@@ -766,8 +826,8 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-t-md{
@@ -775,23 +835,27 @@ video {
   border-top-right-radius: 0.375rem;
 }
 
-.rounded-s-sm{
-  border-start-start-radius: 0.125rem;
-  border-end-start-radius: 0.125rem;
-}
-
-.rounded-t-sm{
-  border-top-left-radius: 0.125rem;
-  border-top-right-radius: 0.125rem;
-}
-
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-gray-400{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(41 41 41 / var(--tw-border-opacity));
+}
+
+.border-text{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-backgroundColor{
@@ -819,9 +883,22 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-text{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-2{
+  padding: 0.5rem;
 }
 
 .px-4{
@@ -839,6 +916,40 @@ video {
   padding-bottom: 2rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
 .pb-8{
   padding-bottom: 2rem;
 }
@@ -847,57 +958,30 @@ video {
   padding-top: 0.5rem;
 }
 
-.pt-1{
-  padding-top: 0.25rem;
-}
-
-.pt-0{
-  padding-top: 0px;
-}
-
-.pt-0\.5{
-  padding-top: 0.125rem;
-}
-
-.pt-3{
-  padding-top: 0.75rem;
-}
-
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
-}
-
-.pb-\[30rem\]{
-  padding-bottom: 30rem;
-}
-
-.pb-10{
-  padding-bottom: 2.5rem;
-}
-
-.pt-\[5rem\]{
-  padding-top: 5rem;
+.pt-4{
+  padding-top: 1rem;
 }
 
 .pt-8{
   padding-top: 2rem;
 }
 
-.pt-4{
-  padding-top: 1rem;
-}
-
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-sm{
@@ -910,17 +994,22 @@ video {
   line-height: 1rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-\[0\.5rem\]{
+  font-size: 0.5rem;
+}
+
 .text-\[10px\]{
   font-size: 10px;
-}
-
-.text-\[7px\]{
-  font-size: 7px;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold{
@@ -931,6 +1020,10 @@ video {
   font-weight: 600;
 }
 
+.italic{
+  font-style: italic;
+}
+
 .leading-4{
   line-height: 1rem;
 }
@@ -938,6 +1031,11 @@ video {
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(41 41 41 / var(--tw-text-opacity));
+}
+
+.text-secondaryBlue{
+  --tw-text-opacity: 1;
+  color: rgb(101 125 247 / var(--tw-text-opacity));
 }
 
 .text-secondaryYellow{
@@ -955,19 +1053,20 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-secondaryBlue{
-  --tw-text-opacity: 1;
-  color: rgb(101 125 247 / var(--tw-text-opacity));
+.text-\[1opx\]{
+  color: 1opx;
 }
 
 .underline{
   text-decoration-line: underline;
 }
 
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-60{
+  opacity: 0.6;
+}
+
+.opacity-80{
+  opacity: 0.8;
 }
 
 .shadow-sm{
@@ -976,9 +1075,23 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.outline{
+  outline-style: solid;
+}
+
+.outline-1{
+  outline-width: 1px;
 }
 
 body{
