--- a/public/css/style.css
+++ b/public/css/style.css
@@ -722,6 +722,10 @@ video {
   height: 4rem;
 }
 
+.h-60{
+  height: 15rem;
+}
+
 .w-12{
   width: 3rem;
 }
@@ -778,6 +782,10 @@ video {
   width: 2rem;
 }
 
+.w-32{
+  width: 8rem;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -806,6 +814,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around{
+  justify-content: space-around;
+}
+
 .gap-1{
   gap: 0.25rem;
 }
@@ -822,6 +834,10 @@ video {
   overflow: hidden;
 }
 
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -833,6 +849,11 @@ video {
 .rounded-t-md{
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
+}
+
+.rounded-b-md{
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .border{
@@ -856,6 +877,11 @@ video {
 .border-text{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-secondaryBlue{
+  --tw-border-opacity: 1;
+  border-color: rgb(101 125 247 / var(--tw-border-opacity));
 }
 
 .bg-backgroundColor{
@@ -944,6 +970,16 @@ video {
 .py-0\.5{
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-32{
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 
 .pb-10{
@@ -1057,6 +1093,11 @@ video {
   color: 1opx;
 }
 
+.text-secondaryDark{
+  --tw-text-opacity: 1;
+  color: rgb(71 71 71 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1096,4 +1137,40 @@ video {
 
 body{
   font-family: Montserrat;
+}
+
+.hover\:bg-violet-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 41 41 / var(--tw-bg-opacity));
+}
+
+.focus\:border-secondaryBlue:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(101 125 247 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-violet-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(196 181 253 / var(--tw-ring-opacity));
+}
+
+.active\:bg-violet-700:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
 }
