--- a/public/css/style.css
+++ b/public/css/style.css
@@ -566,6 +566,10 @@ video {
   padding-top: 2rem;
 }
 
+.collapse{
+  visibility: collapse;
+}
+
 .absolute{
   position: absolute;
 }
@@ -574,32 +578,12 @@ video {
   position: relative;
 }
 
-.left-1{
-  left: 0.25rem;
-}
-
-.left-8{
-  left: 2rem;
-}
-
-.top-8{
-  top: 2rem;
-}
-
-.left-6{
-  left: 1.5rem;
+.left-2{
+  left: 0.5rem;
 }
 
 .top-6{
   top: 1.5rem;
-}
-
-.left-4{
-  left: 1rem;
-}
-
-.left-2{
-  left: 0.5rem;
 }
 
 .-z-10{
@@ -614,36 +598,12 @@ video {
   margin-top: -1rem;
 }
 
-.mt-1{
-  margin-top: 0.25rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
-.mt-0{
-  margin-top: 0px;
-}
-
-.mt-0\.5{
-  margin-top: 0.125rem;
-}
-
-.mt-\[0\.5rem\]{
-  margin-top: 0.5rem;
-}
-
-.mt-\[1rem\]{
-  margin-top: 1rem;
-}
-
-.mt-\[0\.6rem\]{
-  margin-top: 0.6rem;
-}
-
-.mt-\[0\.1rem\]{
-  margin-top: 0.1rem;
-}
-
-.mt-\[0\.4rem\]{
-  margin-top: 0.4rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .flex{
@@ -654,12 +614,24 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
 .h-20{
   height: 5rem;
 }
 
 .h-24{
   height: 6rem;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-\[10rem\]{
+  height: 10rem;
 }
 
 .h-\[13rem\]{
@@ -670,124 +642,77 @@ video {
   height: 16rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
-.h-96{
-  height: 24rem;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-3{
-  height: 0.75rem;
-}
-
-.h-52{
-  height: 13rem;
-}
-
-.h-\[1rem\]{
-  height: 1rem;
-}
-
-.h-56{
-  height: 14rem;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
-.h-\[3rem\]{
-  height: 3rem;
-}
-
-.h-\[10rem\]{
-  height: 10rem;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
 .h-\[2rem\]{
   height: 2rem;
 }
 
-.h-\[4rem\]{
-  height: 4rem;
+.h-full{
+  height: 100%;
 }
 
-.h-60{
-  height: 15rem;
+.h-5{
+  height: 1.25rem;
+}
+
+.h-6{
+  height: 1.5rem;
 }
 
 .w-12{
   width: 3rem;
 }
 
-.w-40{
-  width: 10rem;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-\[4rem\]{
-  width: 4rem;
-}
-
-.w-\[8rem\]{
+.w-32{
   width: 8rem;
 }
 
-.w-\[10rem\]{
+.w-40{
   width: 10rem;
-}
-
-.w-\[14rem\]{
-  width: 14rem;
-}
-
-.w-\[5rem\]{
-  width: 5rem;
 }
 
 .w-\[12rem\]{
   width: 12rem;
 }
 
-.w-\[6rem\]{
-  width: 6rem;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-20{
-  width: 5rem;
-}
-
 .w-\[2rem\]{
   width: 2rem;
 }
 
-.w-32{
-  width: 8rem;
+.w-\[6rem\]{
+  width: 6rem;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.w-5{
+  width: 1.25rem;
+}
+
+.w-6{
+  width: 1.5rem;
 }
 
 .flex-1{
   flex: 1 1 0%;
+}
+
+.shrink-0{
+  flex-shrink: 0;
+}
+
+.rotate-180{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.list-disc{
+  list-style-type: disc;
+}
+
+.list-none{
+  list-style-type: none;
 }
 
 .grid-cols-4{
@@ -814,10 +739,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around{
-  justify-content: space-around;
-}
-
 .gap-1{
   gap: 0.25rem;
 }
@@ -830,6 +751,12 @@ video {
   gap: 1rem;
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -838,12 +765,21 @@ video {
   white-space: nowrap;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded-full{
-  border-radius: 9999px;
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-b-md{
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .rounded-t-md{
@@ -851,9 +787,9 @@ video {
   border-top-right-radius: 0.375rem;
 }
 
-.rounded-b-md{
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+.rounded-t-xl{
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
 }
 
 .border{
@@ -862,6 +798,14 @@ video {
 
 .border-2{
   border-width: 2px;
+}
+
+.border-b-0{
+  border-bottom-width: 0px;
+}
+
+.border-t-0{
+  border-top-width: 0px;
 }
 
 .border-gray-400{
@@ -874,14 +818,24 @@ video {
   border-color: rgb(41 41 41 / var(--tw-border-opacity));
 }
 
+.border-secondaryBlue{
+  --tw-border-opacity: 1;
+  border-color: rgb(101 125 247 / var(--tw-border-opacity));
+}
+
 .border-text{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-secondaryBlue{
+.border-gray-300{
   --tw-border-opacity: 1;
-  border-color: rgb(101 125 247 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-backgroundColor{
@@ -904,14 +858,24 @@ video {
   background-color: rgb(234 234 234 / var(--tw-bg-opacity));
 }
 
+.bg-text{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-text{
+.bg-gray-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-backgroundFooter{
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 22 91 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -923,53 +887,8 @@ video {
   padding: 1rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.py-0{
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-0\.5{
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+.p-5{
+  padding: 1.25rem;
 }
 
 .px-3{
@@ -980,6 +899,31 @@ video {
 .px-32{
   padding-left: 8rem;
   padding-right: 8rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-10{
@@ -1000,6 +944,22 @@ video {
 
 .pt-8{
   padding-top: 2rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.text-left{
+  text-align: left;
 }
 
 .text-center{
@@ -1025,27 +985,19 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-\[0\.5rem\]{
-  font-size: 0.5rem;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
-.text-\[10px\]{
-  font-size: 10px;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -1054,6 +1006,10 @@ video {
 
 .font-semibold{
   font-weight: 600;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .italic{
@@ -1074,6 +1030,11 @@ video {
   color: rgb(101 125 247 / var(--tw-text-opacity));
 }
 
+.text-secondaryDark{
+  --tw-text-opacity: 1;
+  color: rgb(71 71 71 / var(--tw-text-opacity));
+}
+
 .text-secondaryYellow{
   --tw-text-opacity: 1;
   color: rgb(255 232 16 / var(--tw-text-opacity));
@@ -1089,21 +1050,18 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[1opx\]{
-  color: 1opx;
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.text-secondaryDark{
+.text-gray-500{
   --tw-text-opacity: 1;
-  color: rgb(71 71 71 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline{
   text-decoration-line: underline;
-}
-
-.opacity-60{
-  opacity: 0.6;
 }
 
 .opacity-80{
@@ -1116,32 +1074,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.outline{
-  outline-style: solid;
-}
-
-.outline-1{
-  outline-width: 1px;
-}
-
 body{
   font-family: Montserrat;
-}
-
-.hover\:bg-violet-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-primary:hover{
@@ -1149,28 +1088,66 @@ body{
   background-color: rgb(41 41 41 / var(--tw-bg-opacity));
 }
 
-.focus\:border-secondaryBlue:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(101 125 247 / var(--tw-border-opacity));
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
+.hover\:underline:hover{
+  text-decoration-line: underline;
 }
 
-.focus\:ring:focus{
+.focus\:ring-4:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-violet-300:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(196 181 253 / var(--tw-ring-opacity));
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.active\:bg-violet-700:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
+.focus\:ring-1:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-gray-200:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
+}
+
+@media (prefers-color-scheme: dark){
+  .dark\:border-gray-700{
+    --tw-border-opacity: 1;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity));
+  }
+
+  .dark\:bg-gray-900{
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-blue-500{
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-gray-800:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .dark\:focus\:ring-gray-800:focus{
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(31 41 55 / var(--tw-ring-opacity));
+  }
 }
