--- a/public/css/style.css
+++ b/public/css/style.css
@@ -566,6 +566,17 @@ video {
   padding-top: 2rem;
 }
 
+.test{
+  flex: 1 1 0%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(41 41 41 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .collapse{
   visibility: collapse;
 }
@@ -806,6 +817,10 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-transparent{
+  border-color: transparent;
+}
+
 .bg-backgroundColor{
   --tw-bg-opacity: 1;
   background-color: rgb(245 246 251 / var(--tw-bg-opacity));
@@ -841,12 +856,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-cover{
-  background-size: cover;
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.bg-no-repeat{
-  background-repeat: no-repeat;
+.bg-transparent{
+  background-color: transparent;
 }
 
 .object-cover{
@@ -1028,6 +1044,14 @@ video {
   outline-offset: 2px;
 }
 
+.outline-1{
+  outline-width: 1px;
+}
+
+.outline-transparent{
+  outline-color: transparent;
+}
+
 body{
   font-family: Montserrat;
 }
@@ -1042,6 +1066,15 @@ body{
   background-color: rgb(41 41 41 / var(--tw-bg-opacity));
 }
 
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:outline-transparent:focus{
+  outline-color: transparent;
+}
+
 .focus\:ring-1:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -1051,6 +1084,12 @@ body{
 .focus\:ring-4:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -1094,16 +1133,8 @@ body{
     height: 100vh;
   }
 
-  .md\:w-screen{
-    width: 100vw;
-  }
-
   .md\:w-full{
     width: 100%;
-  }
-
-  .md\:bg-opacity-80{
-    --tw-bg-opacity: 0.8;
   }
 
   .md\:bg-opacity-30{
@@ -1120,5 +1151,9 @@ body{
 
   .md\:bg-no-repeat{
     background-repeat: no-repeat;
+  }
+
+  .md\:pb-8{
+    padding-bottom: 2rem;
   }
 }
