--- a/src/css/input.css
+++ b/src/css/input.css
@@ -14,3 +14,12 @@ body {
 		@apply outline-none bg-blue-600 flex-1 font-bold text-primary;
 	}
 }
+
+@layer components {
+	.card {
+		@apply md:w-[12rem] w-40 md:h-[20rem] h-[16rem]  bg-secondaryGray rounded-md;
+	}
+	.card-image {
+		@apply w-full md:h-[16rem] h-[13rem] bg-secondaryBlue overflow-hidden rounded-t-md;
+	}
+}
