--- a/public/css/style.css
+++ b/public/css/style.css
@@ -567,11 +567,15 @@ video {
 }
 
 .card{
+  margin-top: 0.5rem;
   height: 16rem;
-  width: 10rem;
+  width: 9rem;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(234 234 234 / var(--tw-bg-opacity));
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 768px){
@@ -599,6 +603,10 @@ video {
 
 .collapse{
   visibility: collapse;
+}
+
+.static{
+  position: static;
 }
 
 .absolute{
@@ -715,10 +723,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-screen{
-  width: 100vw;
 }
 
 .flex-1{
@@ -1179,10 +1183,6 @@ body{
 
   .md\:grid-cols-8{
     grid-template-columns: repeat(8, minmax(0, 1fr));
-  }
-
-  .md\:justify-start{
-    justify-content: flex-start;
   }
 
   .md\:gap-0{
